# hist-rs

./: .gitignore  Cargo.toml  README.md  justfile
src/: cli.rs  main.rs
