[package]
name = "hist-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hist"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bstr = "1.12.0"
bumpalo = "3.19.0"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
hashbrown = "0.16.0"
regex = "1.12.2"

[profile.release]
lto = true
codegen-units = 1
debug = false
